# kinesis-tool

./: .gitignore  Cargo.toml  README.md
src/: controller.rs  kinesis.rs  lib.rs  main.rs  screen.rs
src/aws/: mod.rs
src/aws/kinesis/: controller.rs  helper.rs  mod.rs
src/kinesis/: controller.rs  helper.rs  mod.rs
src/top/: controller.rs
src/utils/: screen.rs
